WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302028
Crash at WebKit::WebExtension::populateActionPropertiesIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=302028
Summary
Crash at WebKit::WebExtension::populateActionPropertiesIfNeeded
Kiara Rose
Reported
2025-11-05 11:47:08 PST
rdar://164059373
Attachments
Add attachment
proposed patch, testcase, etc.
Kiara Rose
Comment 1
2025-11-05 11:55:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53471
EWS
Comment 2
2025-11-05 15:18:37 PST
Committed
302611@main
(3a0125954abc): <
https://commits.webkit.org/302611@main
> Reviewed commits have been landed. Closing PR #53471 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug